# JVM-rust-ffi

./: .gitignore  README.md
clj-rs/: CHANGELOG.md  Makefile  README.md  libcljrust.dylib  project.clj
clj-rs/clj-rust/: Cargo.toml
clj-rs/clj-rust/src/: lib.rs
clj-rs/doc/: intro.md
clj-rs/src/clj_rs/: core.clj
clj-rs/test/clj_rs/: core_test.clj
j4rs/edn/: Cargo.toml  cargo.sh
j4rs/edn/cheshire/: CHANGELOG.md  README.md  project.clj
j4rs/edn/cheshire/doc/: intro.md
j4rs/edn/cheshire/src/edn/: core.clj
j4rs/edn/cheshire/test/edn/: core_test.clj
j4rs/edn/src/: main.rs
j4rs/rust/: Cargo.toml  build.rs  cargo.sh
j4rs/rust/src/: main.rs
javarust/: Makefile  libprocessor.dylib  make.sh  pom.xml  processor  processor.rs
javarust/src/main/java/: Processor.java
jnr/: .project  Makefile  build.gradle  settings.gradle
jnr/src/main/java/: main.java
jnr/testing/: Cargo.toml
jnr/testing/src/: lib.rs
