[package]
name = "clj-rust"
version = "0.1.0"
authors = ["Otavio Pace <otaviopp8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cljrust"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
edn-rs = "0.13.1"
edn-derive = "0.3.1"
